      #7695).
  * Attilio Fiandrotti
    - Enhanced gtk frontend with support for always displaying the main
      menu and "jumping" between menu items. Lots of other changes.
  * Colin Watson
    - Add iterate methods to the stack database module.
    - Throw "100 internal error" if a frontend's go() method returns
      DC_NOTOK.

 -- Colin Watson <cjwatson@debian.org>  Mon,  9 May 2005 19:23:45 +0100

cdebconf (0.77) unstable; urgency=low

  NOTE: Not for sarge.
  * Colin Watson
    - Implement plugins (custom widgets). See doc/plugins.txt for details.
  * Updated translations:
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Russian (ru.po) by Yuri Kozlov
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov

 -- Colin Watson <cjwatson@debian.org>  Tue,  3 May 2005 12:01:58 +0100

cdebconf (0.76) experimental; urgency=low

  NOTE: Not for sarge.
  * Colin Watson
    - Add draft plugins specification.
    - Append '\n' to debug messages automatically when printing to stderr,
      so that they aren't needed in every string.
    - Tidy up libdebconfclient namespace: rename debconf_commandf to
      debconfclient_commandf and make it static. Doesn't seem to affect any
      current users, and if it does, they should have been using
      debconf->commandf() instead.
    - Sync from debconf (closes: #266898):
      + Change the shell confmodule to not construct functions on the fly.
        The new code is smaller, a bit faster, and simpler, but the
        important thing is that it does not clobber $@. The old version
        messed up $@ if parameters contained spaces.
    - Add config instances for the standard debconf databases in /target, so
      that we can do 'debconf-copydb -p foo/bar configdb target_configdb'
      once the base system is installed.
    - Remove src/cdebconf.conf-dist on distclean.
    - Fix some of the build issues with the corba frontend, although it
      still doesn't even remotely build or work.