@@ -11,6 +11,9 @@ cdebconf (0.78) UNRELEASED; urgency=low
     - Add iterate methods to the stack database module.
     - Throw "100 internal error" if a frontend's go() method returns
       DC_NOTOK.
+    - Log a warning and fall back to displaying an unsorted list if a
+      template's Indices don't match its Choices, namely too few indices or
+      an index out of range (closes: #309667).
 
  -- Colin Watson <cjwatson@debian.org>  Mon,  9 May 2005 19:23:45 +0100
 
